# qa-trainings

./: .dockerignore  Dockerfile  MYSQL_SETUP.md  QA Training Plan.xlsx  QA Training Roadmap.xlsx  analyze_excel.py  app.py  docker-compose.yml  import_knowledge.py  index.html  init_mysql_db.py  migrate_remove_categories.py  migrate_to_mysql.py  models.py  pyproject.toml  requirements.txt  seed_db.py  seed_instructors.py  test_crud.md  verify_knowledge_data.py
db_copy/: trainings.db
instance/: trainings.db
statics/css/: index.css
templates/: admin_certificate_form.html  admin_certificates.html  admin_dashboard.html  admin_instructor_form.html  admin_instructors.html  admin_student_form.html  admin_topic_form.html  admin_training_form.html  attendance.html  base.html  certificate_view.html  index.html  index_backup.html  index_new.html  instructor_profile.html  instructors.html  knowledge_assessment.html  progress.html  student_profile.html  students.html  topic.html  training.html  trainings.html
